--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,7 @@ display: block;
 body {
 line-height: 1;
 font-family: 'Raleway', Helvetica, Arial, sans-serif;
+font-weight: 500;
 background-color: #F7B617;
 color: #fff;
 }
@@ -52,6 +53,7 @@ border-spacing: 0;
 /* ESTILOS BÁSICOS */
 h1, h2, h3, h4, h5, h6 {
 font-family: 'Raleway', Helvetica, Arial, sans-serif;
+font-weight: 500;
 }
 h1 {
 font-size: 3rem;
@@ -81,16 +83,37 @@ color: gray;
 a, a:hover, a:focus, a:active,
 .btn, .btn:hover, .btn:active, .btn:focus {
 	transition: .5s ease all;
+	letter-spacing: 1px;
 }
-.btn {
+.btn-default {
 color: #fff;
 transition: .5s ease all;
 border: 1px solid #fff;
+background-color: transparent;
 }
-.btn:hover, .btn:active, .btn:focus {
+.btn-default:hover, 
+.btn-default:active, 
+.btn-default:focus {
 background-color: #fff;
 transition: .5s ease all;
 color: #F7B617;
+border-color: #fff;
+}
+.btn-primary {
+    color: #2b2b2b;
+    background-color: #fff;
+    border-color: #fff;
+    font-size: 120%;
+    font-weight: 700;
+}
+.btn-primary:hover, 
+.btn-primary:active, 
+.btn-primary:focus {
+    color: #F7B617;
+    background-color: #fff;
+    border-color: #fff;
+    font-size: 120%;
+    font-weight: 700;
 }
 p {
 font-family: 'Raleway', Helvetica, Arial, sans-serif;
@@ -144,10 +167,6 @@ margin: 0;
     background-color: #fff;
     height: 120px;
     border-color: transparent;
-    display: flex;
-    align-items: center;
-    padding: 0;
-    margin: 0;
 }
 .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
     color: #F7B617;
@@ -159,9 +178,8 @@ margin: 0;
 .navbar-default .navbar-nav>li>a {
     color: #2B2B2B;
     padding-top: 10px;
-    font-weight: 400;
+    font-weight: 500;
 }
-
 /*
 // HEADER
 */
@@ -180,4 +198,36 @@ header {
 header .box {
 	color: #fff;
 	background-color: #F7B617;
+    padding: 2em;
+}
+header .box .lead {
+		margin: 1em 0 1em;
+    font-weight: 500;
+    font-size: 1.7rem;
+}
+header .box.xs {
+    max-width: 80%;
+}
+.lines {
+    margin: 2em 0;
+    position: relative;
+	text-align: center;
+}
+.lines:before,
+.lines:after {
+	content: '';
+	height: 1px;
+	width: 40%;
+	position: absolute;
+	background-color: #fff;
+    top: 45%;
+}
+.lines:before {
+	left: 0;
+}
+.lines:after {
+	right: 0;
+}
+.box.xs h2 {
+    margin-bottom: 1em;
 }
