--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -27,4 +27,13 @@
 		padding-top: 30px;
     	padding-bottom: 30px;
 	}
+	#app .box {
+    max-width: 95%;
+    margin: 0 auto;
+    float: none;
+    padding: 2em 0;
+	}
+	#app h3 {
+		margin: 2.5em 0 0;
+	}
 }
